--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 
-		<h1 style="text-align:center,background-color:purple;color:red"> project1 </h1>
+		<h1 style="text-align:center;background-color:purple;color:red"> project1 </h1>
 		<hr/>
-		<h2> Introduction </h2>
+		<h2 style="text-align:center"> Introduction </h2>
 		<p> hello welocme to devops project1 </p>
 </body>
 </html>
