new modified html file

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-		<h1 style="text-align:center;background-color:purple;color:red"> project1 </h1>
+		<h1 style="text-align:center;background-color:purple;color:red"> sample-project1 </h1>
 		<hr/>
 		<h2 style="text-align:center"> Introduction </h2>
 		<p> hello welocme to devops project1 </p>
